Fixed TPS title align left

--- a/sass/main.css
+++ b/sass/main.css
@@ -6474,7 +6474,7 @@ body.modal-active {
   line-height: 40px;
   letter-spacing: 0.2px;
   font-weight: 700;
-  text-align: center;
+  text-align: left;
   margin-bottom: 20px;
 }
 
