--- a/sass/style/_tps.scss
+++ b/sass/style/_tps.scss
@@ -25,7 +25,7 @@
     line-height: 40px;
     letter-spacing: 0.2px;
     font-weight: 700;
-    text-align: center;
+    text-align: left;
     margin-bottom: 20px;
   }
   & &__progress {
